fix swagger and added user controller
